build(CI) Atualização de pipeline de CI com Docker e Sonar
