# src/routes/user.routes.ts
@@ -1,6 +1,7 @@
 import { Router } from "express";
 import { authenticateToken } from "../middlewares/auth.middeware";
 import { UserController } from "../controllers/user.controller";
+import { Request, Response, NextFunction } from "express";
 
 export class UserRouter {
   public router: Router;
@@ -17,6 +18,16 @@ export class UserRouter {
     this.router.post("/login", this.userController.login.bind(this.userController));
     this.router.put("/updatePassword",authenticateToken,this.userController.updatePassword.bind(this.userController));
     this.router.get("/user", authenticateToken, this.userController.getUsers.bind(this.userController));
+    
+
+    this.router.get("/lista", authenticateToken, async (req: Request, res: Response, next: NextFunction): Promise<void> => {     
+        try{
+            await this.userController.getUsers(req, res )
+          } catch (error) {
+            next(error); 
+          }
+       });
+    
   }
 
   public static getRouter(): Router {
